# lgbtq-Atlas

./: .env.example  .gitignore  CLAUDE_CODE_DEV_BRIEF.md  DATA_REFERENCE.md  main.py  pyproject.toml
.github/workflows/: ci.yml  data-refresh.yml  deploy.yml
atlas/: config.py
atlas/api/: data_store.py  main.py  models.py
atlas/api/routes/: cities.py  map.py  search.py  states.py
atlas/export/: build.py
atlas/ingest/: base.py  hrc_sei.py  trevorproject.py  williams_population.py
atlas/narrative/: generator.py
atlas/scoring/: composite.py  dimensions.py
atlas/transform/: cities.py  city_mei.py  community.py  economic.py  geo.py  health.py  legal.py  normalize.py  population.py  safety.py  socioeconomic.py  youth.py
data/: MANIFEST.md  SOURCES.md
data/exports/: cities.geojson  states_map.json
data/exports/state_profiles/: 01.json  02.json  04.json  05.json  06.json  08.json  09.json  10.json  11.json  12.json  13.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  40.json  41.json  42.json  44.json  (+11 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: atlas.ts
frontend/src/hooks/: useCityProfile.ts  useMapLayer.ts  useStateProfile.ts
frontend/src/store/: atlasStore.ts
frontend/src/types/: profile.ts
frontend/src/utils/: colorScales.ts
pipeline/: cli.py
(+21 files in other folders)
